feat: complete all spec content with zero stubs
Major content release completing all language specifications:

- Replace all 2030+ stub files with comprehensive documentation
- Fix SQLFluff config URL (moved to /configuration/index.html)
- Add complete MySQL commands and functions reference
- Refactor searchSpecs for reduced cognitive complexity
- Update biome config to exclude generated frontend files
- Clear stub allowlist (0 stubs remaining)
- Generate fresh health report for all 35 languages

Validation:
- All tests passing (7/7)
- Lint clean
- Stub validation: 0 stubs
- Version validation: passed

Languages covered: assembly, bash, basic, batch, c, clojure, cpp,
csharp, css, dart, dockerfile, elixir, git, go, haskell, html,
java, javascript, julia, kotlin, lua, markdown, ocaml, php,
powershell, python, r, ruby, rust, scala, sql, swift, typescript,
yaml, zig